# High-Performance-Stock-Market-Data-Analysis

./: CMakeLists.txt  README.md  master.cpp  stocks_metadata.csv
include/: analysis.h  fileIO.h  parallel.h  stockData.h
src/: analysis.cpp  fileIO.cpp  main.cpp  parallel.cpp
